<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343F3E"
    android:textAlignment="center"
    tools:context=".Input_page"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="124dp"
        android:layout_height="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/cardiacrecorder_mainlogo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Add information for new record"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.032" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="348dp"
        android:layout_height="457dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.306"
        >

        <Button
            android:id="@+id/enter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter"
            android:textAllCaps="false"
            android:textColor="#090909"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#94B0DA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.746"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Comment"
            app:layout_constraintVertical_bias="0.604" />

        <EditText
            android:id="@+id/SP"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:background="#DAC9C9"
            android:ems="10"
            android:hint="Systollic Pressure in mm hg"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#493F3F"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.059" />

        <EditText
            android:id="@+id/DP"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:background="#DAC9C9"
            android:ems="10"
            android:hint="Diastolic Pressure in mm Hg"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#493F3F"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SP"
            app:layout_constraintVertical_bias="0.045" />

        <EditText
            android:id="@+id/HeartRate"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:background="#DAC9C9"
            android:ems="10"
            android:hint="Heart rate in bit per minute"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#493F3F"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DP"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/Comment"
            android:layout_width="203dp"
            android:layout_height="67dp"
            android:background="#DAC9C9"
            android:ems="10"
            android:hint="Comment"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTime"
            app:layout_constraintVertical_bias="0.276" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:background="#DAC9C9"
            android:ems="10"
            android:hint="Insert date(dd-mm-yy)"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="#493F3F"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeartRate"
            app:layout_constraintVertical_bias="0.044" />

        <EditText
            android:id="@+id/editTime"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:background="#DAC9C9"
            android:ems="10"
            android:hint="Insert time(ie.10.30pm)"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDate"
            app:layout_constraintVertical_bias="0.086" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>