<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343F3E"
    app:layout_insetEdge="none"
    tools:context=".MainActivity">

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/cardiacrecorder_mainlogo" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:text="+Add new record"
        android:textAllCaps="false"
        android:textColor="@color/black"
...
